# AutoRepro

./: .flake8  .gitignore  .importlinter  .pre-commit-config.yaml  .snyk  CLAUDE.md  CONTRIBUTING.md  PHASE1_FINAL_DELIVERABLES_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PR_BODY_86.md  README.md  RULES.md  Report.md  baseline_metrics.txt  complexity_metrics.json  coverage_report.txt  current_help.txt  current_plan.txt  current_scan.json  demo_plugin.py  exec.jsonl  flake8_report.txt  formatting_fix.py  lines_count.json  maintainability_metrics.json  mypy.ini  phase1_success_metrics_report.md  plan-issue-4.md  pr.md  pyproject.toml  raw_metrics.json  report.md  repro.md  requirements.txt  ruff_refactoring_opportunities.txt  ruff_violations_analysis.md  runs.jsonl  sourcery_analysis.txt  (+10 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dependabot.yml  pre-commit.yml  snyk.yml  update-mindmap.yml
analysis/comprehensions/: conversion_targets.md  technique4_results.md
analysis/conditions/: complex_conditions_analysis.md  technique5_results.md
analysis/decorators/: cross_cutting_analysis.md
analysis/duplication/: final_results.txt  findings.txt
analysis/large_functions/: all_functions.txt  cmd_plan_refactoring_results.md  detailed_complexity.txt  high_complexity.txt  long_functions.txt  priority_analysis.md  technique3_results_summary.md
analysis/section_c/: technique_6_7_results.md
analysis/temporaries/: temp_variable_analysis.md
autorepro/: __init__.py  __main__.py  cli.py  detect.py  env.py  issue.py  planner.py  pr.py  project_config.py  report.py  rules.py  sync.py
autorepro/config/: __init__.py  argument_groups.py  defaults.py  exceptions.py  github_ops.py  models.py
autorepro/core/: __init__.py  plan_service.py  planning.py
autorepro/io/: __init__.py  github.py
autorepro/render/: __init__.py  formats.py
autorepro/utils/: __init__.py  cli_validation.py  decorators.py  error_handling.py  file_ops.py  github.py  github_api.py  logging.py  plan_processing.py  process.py  repro_bundle.py  validation_helpers.py
baselines/phase2-config/: baseline_performance.txt
docs/: DELETION_POLICY.md  PHASE2.md  mypy-ratchet.md
docs/sections/: Section B: Function Structure - Technique 3.md  Section C Implementation Instructions.md  section-a-tech1.md  section-a-tech2.md
examples/: test_exit_codes.py
fakebin/: gh
scripts/: check-file-size.sh  gen_mindmap.py  regold.py
tests/: _golden_utils.py  conftest.py  test_ci_barriers.py  test_cli.py  test_cli_smoke.py  test_cli_verbosity.py  test_config.py  test_config_behavioral.py  test_config_validation.py  test_decorators.py  test_detect.py  test_exec_cli.py  test_exec_multi.py  test_exit_codes_integration.py  test_file_path_resolution.py  test_focused_implementation.py  test_golden_plan.py  test_golden_scan.py  test_init.py  test_init_diff.py  test_integration_exit_codes.py  test_message_consistency.py  test_newline_endings.py  test_plan_cli.py  test_plan_cli_old.py  test_plan_core.py  test_plan_core_old.py  test_plan_json_cli.py  test_plan_json_core.py  test_plan_strict_mode.py  test_pr_cli.py  test_pr_enrichment_integration.py  test_pr_enrichment_negative_paths.py  test_replay.py  test_repo_stability.py  test_report_cli.py  test_repro_bundle.py  test_rules_core.py  test_scan_cli.py  test_scan_enhanced_golden.py  (+6 more)
tests/fixtures/: demo_rules.py
tests/golden/plan/: ambiguous.desc.txt  ambiguous.expected.json  ambiguous.expected.md  basic_pytest.desc.txt  basic_pytest.expected.json  basic_pytest.expected.md  jest_watch.desc.txt  jest_watch.expected.json  jest_watch.expected.md
tests/golden/scan/: empty.expected.json  empty.expected.txt  glob_only.expected.json  mixed_py_node.expected.json  mixed_py_node.expected.txt  node_lock.expected.json  node_lock.expected.txt  python_pyproject.expected.json  python_pyproject.expected.txt
tests/golden/scan/enhanced/: SCAN.depth2.gitignore.json  SCAN.depth2.json
tests/utils/: __init__.py  test_cli_validation.py  test_error_handling.py  test_file_ops.py  test_process.py
tests/validation_baselines/: baseline_plan.json  baseline_plan.md  baseline_scan.json  benchmark_performance.py  benchmark_results.json  cli_validation_report.md  compare_behavior.py  performance_analysis.md  rollback_validation_report.md
