[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autorepro"
version = "0.0.1"
description = "AutoRepro turns an Issue into clear repro steps and a shareable workspace"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ali", email = "ali@example.com"}
]
keywords = ["developer-tools", "reproduction", "devcontainer", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
    "Topic :: Software Development :: Testing"
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
autorepro = "autorepro.cli:main"

[project.urls]
Homepage = "https://github.com/ali90h/AutoRepro"
Repository = "https://github.com/ali90h/AutoRepro.git"
Issues = "https://github.com/ali90h/AutoRepro/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autorepro*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short"
]